--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/perindex/perindex",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/list/list"
   ],
   "window":{
     "navigationBarBackgroundColor": "#20A0FF",
