--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   ],
   "window":{
     "navigationBarBackgroundColor": "#20A0FF",
-    "navigationBarTitleText": "Json-Demo",
+    "navigationBarTitleText": "影之讯",
     "navigationBarTextStyle":"black",
     "backgroundColor":"#99A9BF",
     "backgroundTextStyle":"light",
